--- a/step/templates/step/azienda.html
+++ b/step/templates/step/azienda.html
@@ -10,7 +10,6 @@
 
 </head>
 <body>
-
     <nav class="container-fluid barra_navigazione text-center">
         <div class="row justify-content-between">
             <a href="/step">
@@ -19,26 +18,15 @@
         </div>
     </nav>
 
+    
     <div class="container mt-4">
         <div class="row">
             <div class="col12">
-                <h1>{{ offerta.titolo }}</h1>
-                {% for singola in Azienda %}
-                {% if offerta.id_azienda == singola.id_azienda %}
-                    <a class="link_azienda" href="">{{singola.azienda}}</a>
-                {% endif %}
-                {% endfor %}
-                <p class="text_offer">{{offerta.descrizione}}</p>
-                <h5>Competenze richieste:</h5>
-                {% for competenza in competenze %}
-                    <li>{{ competenza.id_competenza.competenza }} - <a href="{{ competenza.id_competenza.link }}">{{ competenza.id_competenza.link }}</a></li>
-                {% empty %}
-                <li>Nessuna competenza associata</li>
-                {% endfor %}
+                <h1>{{azienda.azienda}}</h1>
             </div>
         </div>
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
