--- a/step/templates/step/step.html
+++ b/step/templates/step/step.html
@@ -12,28 +12,25 @@
 <body>
     <nav class="container-fluid barra_navigazione text-center">
         <div class="row justify-content-between">
-            <div class="col-4 logo"></div>
-            <div class="col-4">
-                <a href="">
-                    <div class="login_aziende_button">LOGIN AZIENDE</div>
-                </a>
-            </div>
+            <a href="/step">
+                <div class="col-4 logo"></div> 
+            </a>
         </div>
     </nav>
 
     <div class="container-xl">
         <div class="row justify-content-between">
             {% for offer in Offertes %}
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-lg-4 col-md-6 col-sm-12">
                     <a href="/offerta/{{offer.id_offerta}}">
                         <div class="offer_box">
                             <h2>{{offer.titolo}}</h2>
                             {% for singola in Azienda %}
                                 {% if offer.id_azienda == singola.id_azienda %}
-                                    <p>{{singola.azienda}}</p>
+                                    <a class="link_azienda" href="/azienda/{{singola.id_azienda}}">{{singola.azienda}}</a>
                                 {% endif %}
                             {% endfor %}
-                            <p>{{offer.descrizione}}</p>
+                            <p class="text_offer">{{offer.descrizione}}</p>
                         </div>
                     </a>
                 </div>
