--- a/step/static/step/style.css
+++ b/step/static/step/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 .barra_navigazione{
-    background-color: #48CFCB;
+    background-color: #1560bd;
     height: 13vh;
     padding: 20px 20px 0;
 }
@@ -16,7 +16,7 @@ body{
     margin-left: 20px;
 }
 
-.login_aziende_button{
+.button{
     background-color: #229799;
     color:#F5F5F5;
     height: 80px;
@@ -30,7 +30,7 @@ body{
     background-color: #F5F5F5;
     margin: 20px 0;
     padding: 20px;
-    box-shadow: -5px 5px 10px #0000002a;;
+    box-shadow: -5px 5px 10px #0000002a;
 }
 
 a{
