--- a/step/templates/step/azienda.html
+++ b/step/templates/step/azienda.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Next_step</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     {% load static %}
     <link rel="stylesheet" href="{% static 'step/style.css' %}">
@@ -21,8 +21,49 @@
     
     <div class="container mt-4">
         <div class="row">
-            <div class="col12">
-                <h1>{{azienda.azienda}}</h1>
+            <div class="col-lg-6 col-md-12 order-lg-1 order-md-2">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-10">
+                            <h1>{{azienda.azienda}}</h1>
+                        </div>
+                        <div class="col-2 mt-2">
+                            <img src="../../static/step/loghi/{{azienda.url_logo}}" style="height: 40px;" alt="">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <p class="text_offer">{{azienda.descrizione}}</p>
+                            <h5>Contatti</h5>
+                            <li>{{azienda.mail}}</li>
+                            <li>{{azienda.telefono}}</li>
+                        </div>  
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-5 col-md-11 offset-1 order-lg-2 order-md-1 mt-3">
+                <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="../../static/step/foto_azienda/{{azienda.url_img_1}}" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../../static/step/foto_azienda/{{azienda.url_img_2}}" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../../static/step/foto_azienda/{{azienda.url_img_3}}" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+        
             </div>
         </div>
     </div>
