--- a/step/templates/step/offerta.html
+++ b/step/templates/step/offerta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Next_step</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     {% load static %}
     <link rel="stylesheet" href="{% static 'step/style.css' %}">
@@ -21,24 +21,61 @@
 
     <div class="container mt-4">
         <div class="row">
-            <div class="col12">
+            <div class="col-lg-6 col-md-12 order-lg-1 order-md-2">
                 <h1>{{ offerta.titolo }}</h1>
                 {% for singola in Azienda %}
                 {% if offerta.id_azienda == singola.id_azienda %}
-                    <a class="link_azienda" href="">{{singola.azienda}}</a>
+                    <a class="link_azienda" href="/azienda/{{singola.id_azienda}}">{{singola.azienda}}</a>
                 {% endif %}
                 {% endfor %}
+                
+                <p class="text_offer">Sede: {{offerta.luogo}}</p>
+                
                 <p class="text_offer">{{offerta.descrizione}}</p>
+
+                {% for singola in Azienda %}
+                {% if offerta.id_azienda == singola.id_azienda %}
+                  <a class="btn btn-primary mb-2" href="mailto:{{singola.mail}}" target="_blank" role="button">Contattaci</a>
+                {% endif %}
+                {% endfor %}
+
                 <h5>Competenze richieste:</h5>
                 {% for competenza in competenze %}
-                    <li>{{ competenza.id_competenza.competenza }} - <a href="{{ competenza.id_competenza.link }}">{{ competenza.id_competenza.link }}</a></li>
+                    <li>{{ competenza.id_competenza.competenza }} - <a href="{{ competenza.id_competenza.link }}"  target="_blank">{{ competenza.id_competenza.link }}</a></li>
                 {% empty %}
                 <li>Nessuna competenza associata</li>
+                {% endfor %}
+            </div>
+            <div class="col-lg-5 col-md-11 offset-1 order-lg-2 order-md-1 mt-3">
+                {% for azienda in Azienda %}
+                {% if offerta.id_azienda == azienda.id_azienda %}
+                <div id="slider_offerta" class="carousel slide">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="../../static/step/foto_azienda/{{azienda.url_img_1}}" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../../static/step/foto_azienda/{{azienda.url_img_2}}" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../../static/step/foto_azienda/{{azienda.url_img_3}}" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#slider_offerta" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#slider_offerta" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                {% endif %}
                 {% endfor %}
             </div>
         </div>
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
