--- a/step/templates/step/step.html
+++ b/step/templates/step/step.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Next_step</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     {% load static %}
     <link rel="stylesheet" href="{% static 'step/style.css' %}">
@@ -30,7 +30,7 @@
                                     <a class="link_azienda" href="/azienda/{{singola.id_azienda}}">{{singola.azienda}}</a>
                                 {% endif %}
                             {% endfor %}
-                            <p class="text_offer">{{offer.descrizione}}</p>
+                            <p class="text_offer">{{offer.descrizione_breve}}</p>
                         </div>
                     </a>
                 </div>
