responsive and offerbox repair repair

--- a/step/templates/step/offerta.html
+++ b/step/templates/step/offerta.html
@@ -46,7 +46,7 @@
                 <li>Nessuna competenza associata</li>
                 {% endfor %}
             </div>
-            <div class="col-lg-5 col-md-11 offset-1 order-lg-2 order-md-1 mt-3">
+            <div class="col-lg-5 col-md-12 offset-lg-1 order-lg-2 order-md-1 my-3">
                 {% for azienda in Azienda %}
                 {% if offerta.id_azienda == azienda.id_azienda %}
                 <div id="slider_offerta" class="carousel slide">
