--- a/step/static/step/style.css
+++ b/step/static/step/style.css
@@ -33,6 +33,15 @@ body{
     box-shadow: -5px 5px 10px #0000002a;
 }
 
+@media screen and (max-width: 600px) {
+    .offer_box{
+        background-color: #F5F5F5;
+        margin: 10px 0;
+        padding: 20px;
+        box-shadow: -5px 5px 10px #0000002a;
+    }
+}
+
 a{
     text-decoration: none;
 }
