--- a/step/templates/step/azienda.html
+++ b/step/templates/step/azienda.html
@@ -24,10 +24,10 @@
             <div class="col-lg-6 col-md-12 order-lg-1 order-md-2">
                 <div class="container">
                     <div class="row">
-                        <div class="col-10">
+                        <div class="col-9 mt-1">
                             <h1>{{azienda.azienda}}</h1>
                         </div>
-                        <div class="col-2 mt-2">
+                        <div class="col-3 my-auto text-end">
                             <img src="../../static/step/loghi/{{azienda.url_logo}}" style="height: 40px;" alt="">
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-5 col-md-11 offset-1 order-lg-2 order-md-1 mt-3">
+            <div class="col-lg-5 col-md-12 offset-lg-1 order-lg-2 order-md-1 my-3">
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
